Test hashtree native hashing